tests/miniJava/pos/000698_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) System.out.println ( { } ) ; else while ( 0 ) { } } }
