tests/miniJava/neg/004480_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int int [] java ) { return 0 ; } }
